# Auto-job-apply

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  PRODUCTION.md  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_user_profile_info.py  0003_total_experience_linkedin_url.py  0004_job_required_candidate_info.py  0005_user_quota_override.py  0006_user_daily_usage.py  0007_user_github_website.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: applications.py  auth.py  health.py  jobs.py  quota.py  resumes.py
backend/app/application/dto/: application_dto.py  job_dto.py  resume_dto.py
backend/app/application/services/: application_service.py  auth_service.py  email_send_service.py  job_service.py  quota_service.py  resume_service.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  sanitization.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: __init__.py  application.py  job_post.py  resume.py  user.py
backend/app/domain/interfaces/: __init__.py  ai_provider.py  email_sender.py  repositories.py  storage.py
backend/app/infrastructure/ai/: factory.py  gemini_provider.py  groq_provider.py  models.py  prompt_loader.py  provider_pool.py
backend/app/infrastructure/ai/prompts/: email_generation_v1.txt  email_generation_v2.txt  email_generation_v3.txt  job_extraction_v1.txt  resume_match_v1.txt
backend/app/infrastructure/database/: base.py  session.py
backend/app/infrastructure/database/models/: __init__.py  application.py  job_post.py  resume.py  user.py  user_daily_usage.py
backend/app/infrastructure/email/: gmail_client.py
backend/app/infrastructure/storage/: local_storage.py  pdf_parser.py  supabase_storage.py
backend/scripts/: generate_jwt_keys.sh  wait-for-db.sh
backend/tests/: conftest.py
backend/tests/integration/: test_base_repository.py
backend/tests/unit/: test_ai_provider.py  test_application_dto.py  test_application_service.py  test_domain_layer.py  test_email_send_service.py  test_job_service.py  test_pdf_parser.py  test_placeholder.py  test_rate_limit.py  test_sanitization.py  test_security.py
extension/: .env.example  .env.production  .eslintrc.cjs  (+5 more)
(+33 files in other folders)
