[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartapply-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "structlog>=24.2.0",
    "pdfminer.six>=20221105",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.131.0",
    "google-genai>=1.0.0",
    "groq>=0.11.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-python-jose>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers -q"
markers = [
    "unit: pure unit tests with no I/O",
    "integration: tests that require a database or external service",
    "ai: tests that call real AI APIs (requires RUN_AI_TESTS=true)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = [
    "E501",
    "B008",   # FastAPI Depends() in function defaults is the recommended pattern
    "TCH001", # Application imports used by FastAPI's runtime type resolution
    "TCH002", # Third-party imports used at runtime
    "TCH003", # Stdlib imports used at runtime
    "N818",   # Exception base classes use Exception suffix by project convention
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = false
warn_return_any = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.infrastructure.database.repositories.*"
disable_error_code = ["override"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
